# REST_API_END_POINTS_IMPLEMENTATION_RUST

./: .env  Cargo.toml  README.md  readme.md
src/: handler.rs  main.rs  sensor.rs
src/migrations/: 20200824190010_json.sql
