[package]
name = "my_rest_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum={ version = "0.7.4", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "any", "postgres","uuid"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx-core = "0.7.3"
anyhow = "1.0"
uuid = {version ="1.7.0",features = ["v4"]}
structopt = "0.3.26"
warp = "0.3.6"